--- a/CAN_F103/Debug/makefile
+++ b/CAN_F103/Debug/makefile
@@ -52,6 +52,12 @@ default.size.stdout \
 OBJDUMP_LIST += \
 CAN_F103.list \
 
+OBJCOPY_HEX += \
+CAN_F103.hex \
+
+OBJCOPY_BIN += \
+CAN_F103.bin \
+
 
 # All Target
 all: main-build
@@ -75,12 +81,22 @@ CAN_F103.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
+CAN_F103.hex: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objcopy  -O ihex $(EXECUTABLES) "CAN_F103.hex"
+	@echo 'Finished building: $@'
+	@echo ' '
+
+CAN_F103.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "CAN_F103.bin"
+	@echo 'Finished building: $@'
+	@echo ' '
+
 # Other Targets
 clean:
-	-$(RM) CAN_F103.elf CAN_F103.list CAN_F103.map default.size.stdout
+	-$(RM) CAN_F103.bin CAN_F103.elf CAN_F103.hex CAN_F103.list CAN_F103.map default.size.stdout
 	-@echo ' '
 
-secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
+secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_HEX) $(OBJCOPY_BIN)
 
 fail-specified-linker-script-missing:
 	@echo 'Error: Cannot find the specified linker script. Check the linker settings in the build configuration.'
